--- a/Black/css/styles.css
+++ b/Black/css/styles.css
@@ -8,7 +8,9 @@
 .square1{
     display: flex;
     background-color: white;
-    border-color: black;
+    width:71.428571vw;
+    height: 71.428571vh;
+    border: 0.25pt solid #999999;
     border-style: solid;
     border: width 1px;
     margin:auto
@@ -17,7 +19,17 @@
 .square2{
     display: flex;
     background-color: white;
-    width: 50%;
-    height: 50%;
+    border: 0.25pt solid #999999;
+    border: width 1px;
+    width: 42.857143vw;
+    height: 42.857143vh;
+    margin: auto;
+}
 
+.square3{
+    display: flex;
+    background-color: black;
+    width:14vw;
+    height:14vh;
+    margin: auto;
 }
