--- a/Black/css/styles.css
+++ b/Black/css/styles.css
@@ -13,7 +13,9 @@
     border: 0.25pt solid #999999;
     border-style: solid;
     border: width 1px;
-    margin:auto
+    margin:auto;
+    
+
 }
 
 .square2{
@@ -32,6 +34,7 @@
     width:14vw;
     height:14vh;
     margin: auto;
+
 }
 
 .body{
