--- a/lline3/css/styles.css
+++ b/lline3/css/styles.css
@@ -131,6 +131,7 @@
     right: 0;
     top: 28%;
     overflow: hidden;
+   
 }
 
 .lines-sub1{
@@ -138,8 +139,8 @@
     background-color: rgb(0, 0, 0);
     transform: rotate(-15deg);
     width: 1.50965797vw;
-    height: 50vh;
-    margin: auto;
+    height: 45vh;
+    /* margin: auto; */
     transform-origin: 0% 0%;
 }
 .lines-sub2{
@@ -147,8 +148,8 @@
     background-color: rgb(0, 0, 0);
     transform: rotate(-3deg);
     width: 1.50965797vw;
-    height: 50vh;
-    margin: auto;
+    height: 37vh;
+    /* margin: auto; */
     transform-origin: 0% 0%;
 }
 .lines-sub3{
@@ -157,7 +158,7 @@
     transform: rotate(10deg);
     width: 1.50965797vw;
     height: 30vh;
-    margin: auto;
+    /* margin: auto; */
     transform-origin: 0% 0%;
 }
 .lines-sub4{
@@ -166,7 +167,7 @@
     transform: rotate(25deg);
     width: 1.50965797vw;
     height: 20vh;
-    margin: auto;
+    /* margin: auto; */
     transform-origin: 0% 0%;
 }
 .lines-sub5{
@@ -175,69 +176,70 @@
     transform: rotate(-15deg);
     width: 1.50965797vw;
     height: 18vh;
-    margin: auto;
+    /* margin: auto; */
     transform-origin: 0% 0%;
 }
 .lines-sub6{
     display: flex;
     background-color: rgb(0, 0, 0);
-    transform: rotate(-15deg);
+    transform: rotate(-10deg);
     width: 1.50965797vw;
     height: 40vh;
-    margin: auto;
+    /* margin: auto; */
     transform-origin: 0% 0%;
 }
 .lines-sub7{
     display: flex;
     background-color: rgb(0, 0, 0);
-    transform: rotate(-15deg);
+    transform: rotate(18deg);
     width: 1.50965797vw;
-    height: 50vh;
-    margin: auto;
+    height: 45vh;
+    /* margin: auto; */
     transform-origin: 0% 0%;
 }
 .lines-sub8{
     display: flex;
     background-color: rgb(0, 0, 0);
-    transform: rotate(-15deg);
+    transform: rotate(45deg);
     width: 1.50965797vw;
-    height: 50vh;
-    margin: auto;
+    height: 20vh;
+    /* margin: auto; */
     transform-origin: 0% 0%;
 }
 .lines-sub9{
     display: flex;
     background-color: rgb(0, 0, 0);
-    transform: rotate(-15deg);
+    transform: rotate(-35deg);
     width: 1.50965797vw;
     height: 50vh;
-    margin: auto;
+    /* margin: auto; */
     transform-origin: 0% 0%;
 }
 .lines-sub10{
     display: flex;
     background-color: rgb(0, 0, 0);
-    transform: rotate(-15deg);
+    transform: rotate(30deg);
     width: 1.50965797vw;
-    height: 50vh;
-    margin: auto;
+    height: 30vh;
+    /* margin: auto; */
     transform-origin: 0% 0%;
 }
 .lines-sub11{
     display: flex;
     background-color: rgb(0, 0, 0);
-    transform: rotate(-15deg);
+    transform: rotate(45deg);
     width: 1.50965797vw;
-    height: 50vh;
-    margin: auto;
+    height: 38vh;
+    /* margin: auto; */
     transform-origin: 0% 0%;
 }
 .lines-sub12{
     display: flex;
     background-color: rgb(0, 0, 0);
-    transform: rotate(-15deg);
+    transform: rotate(20deg);
     width: 1.50965797vw;
-    height: 50vh;
-    margin: auto;
+    height: 27vh;
+    margin-top: 10%;
+    /* margin: auto; */
     transform-origin: 0% 0%;
 }
